DAY_5/new_aws/security_group.tf
#Creating the Security group for the Webserver Instance

resource "aws_security_group" "security" {
  
  name    = var.security_group_name
  vpc_id  = var.vpc_id

  ingress {
    
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
    
  }

  ingress {
    
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
    
  }

  egress {
    
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
    
  }

 tags = {
   
    Name = var.security_group_name
   
  }
}  

output "my_security"{
  
  value = aws_security_group.security.id
  
}
